--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 </head>
 <body>
+    
+<img src="family.jpg" alt="Баннер" style="width:100%; height:auto; display:block;">
+    
 <main class="container">
   <h1>Готовим заявление о взыскании алиментов</h1>
   <p class="lead">Пожалуйста заполните все необходимые поля для подачи заявления на взыскание алиментов.</p>
