--- a/index.html
+++ b/index.html
@@ -23,18 +23,24 @@
         Мы объединяем юридическую, психологическую и финансовую помощь, чтобы вы могли пройти через процесс спокойно и уверенно.
       </p>
 
-      <div class="features">
-        <div class="feature-block">
-          <div class="number">01</div>
-          <div class="text">
-            <strong>Цифровой юрист</strong><br>
-            Персонализированные документы и планы<br>
-            (ИИ-помощник с учётом законодательства)
-          </div>
+      <div class="feature-block">
+        <div class="number checkmark">
+          <svg class="checkmark-icon" viewBox="0 0 24 24">
+            <path d="M5 13l4 4L19 7" />
+          </svg>
         </div>
+        <div class="text">
+          <strong>Цифровой юрист</strong><br>
+          Персонализированные документы и планы<br>
+          (ИИ-помощник с учетом законодательства)
+        </div>
+      </div>
 
         <div class="feature-block">
-          <div class="number">02</div>
+            <div class="number checkmark">
+                <svg class="checkmark-icon" viewBox="0 0 24 24">
+                <path d="M5 13l4 4L19 7" />
+              </svg></div>
           <div class="text">
             <strong>Юристы и медиаторы</strong><br>
             Онлайн-консультации по вашей ситуации
@@ -42,7 +48,11 @@
         </div>
 
         <div class="feature-block">
-          <div class="number">03</div>
+            <div class="number checkmark">
+                <svg class="checkmark-icon" viewBox="0 0 24 24">
+                    <path d="M5 13l4 4L19 7" />
+                </svg>
+            </div>
           <div class="text">
             <strong>Финансовые и ипотечные консультанты</strong><br>
             Онлайн-поддержка при разделении бюджета и кредитных обязательств
@@ -50,7 +60,11 @@
         </div>
 
         <div class="feature-block">
-          <div class="number">04</div>
+            <div class="number checkmark">
+                <svg class="checkmark-icon" viewBox="0 0 24 24">
+                    <path d="M5 13l4 4L19 7" />
+                </svg>
+            </div>
           <div class="text">
             <strong>Психологи для родителей и детей</strong><br>
             Онлайн-сессии для взрослых, поддержка детей во время развода
@@ -58,7 +72,11 @@
         </div>
 
         <div class="feature-block">
-          <div class="number">05</div>
+            <div class="number checkmark">
+                <svg class="checkmark-icon" viewBox="0 0 24 24">
+                    <path d="M5 13l4 4L19 7" />
+                </svg>
+            </div>
           <div class="text">
             <strong>Программы по реабилитации</strong><br>
             Эмоциональное и физическое восстановление, новые цели
@@ -66,7 +84,11 @@
         </div>
 
         <div class="feature-block">
-          <div class="number">06</div>
+            <div class="number checkmark">
+                <svg class="checkmark-icon" viewBox="0 0 24 24">
+                    <path d="M5 13l4 4L19 7" />
+                </svg>
+            </div>
           <div class="text">
             <strong>Календарь родителя</strong><br>
             Совместное воспитание, учёт расходов, защищённая переписка
