--- a/alimonyForm.html
+++ b/alimonyForm.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     
-<img src="family.jpg" alt="Баннер" style="width:100%; height:auto; display:block;">
-    
+<img src="family.jpg" alt="Баннер" class="hero-banner" loading="lazy">
+
 <main class="container">
   <h1>Готовим заявление о взыскании алиментов</h1>
   <p class="lead">Пожалуйста заполните все необходимые поля для подачи заявления на взыскание алиментов.</p>
