--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 
-  <img src="start.jpg" alt="Баннер" style="width:100%; height:auto; display:block;">
+<img src="start.jpg" alt="Баннер" class="hero-banner" loading="lazy">
 
+      
   <main class="container">
     <h1>Развод — просто, спокойно, с поддержкой</h1>
     <p class="lead">
