--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         Мы объединяем юридическую, психологическую и финансовую помощь, чтобы вы могли пройти через процесс спокойно и уверенно.
       </p>
 
+      <div class="features">
       <div class="feature-block">
         <div class="number checkmark">
           <svg class="checkmark-icon" viewBox="0 0 24 24">
@@ -95,6 +96,7 @@
             Совместное воспитание, учёт расходов, защищённая переписка
           </div>
         </div>
+      </div>
       </div>
     </section>
 
