--- a/index.html
+++ b/index.html
@@ -25,75 +25,65 @@
       </p>
 
       <div class="features">
-      <div class="feature-block">
-        <div class="number checkmark">
-          <svg class="checkmark-icon" viewBox="0 0 24 24">
-            <path d="M5 13l4 4L19 7" />
-          </svg>
+        <div class="feature-block">
+          <div class="text">
+            <strong>Цифровой юрист</strong><br>
+            Персонализированные документы и планы
+            <br>(ИИ-помощник с учетом законодательства)
+          </div>
+          <div class="feature-image">
+            <img src="robot.png" alt="Цифровой юрист">
+          </div>
         </div>
-        <div class="text">
-          <strong>Цифровой юрист</strong><br>
-          Персонализированные документы и планы<br>
-          (ИИ-помощник с учетом законодательства)
-        </div>
-      </div>
+      
 
         <div class="feature-block">
-            <div class="number checkmark">
-                <svg class="checkmark-icon" viewBox="0 0 24 24">
-                <path d="M5 13l4 4L19 7" />
-              </svg></div>
           <div class="text">
             <strong>Юристы и медиаторы</strong><br>
-            Онлайн-консультации по вашей ситуации
+            Онлайн-консультации по вашей ситуации с <br>учетом всех деталей
+          </div>
+          <div class="feature-image">
+            <img src="laywer.png" alt="Цифровой юрист">
           </div>
         </div>
 
         <div class="feature-block">
-            <div class="number checkmark">
-                <svg class="checkmark-icon" viewBox="0 0 24 24">
-                    <path d="M5 13l4 4L19 7" />
-                </svg>
-            </div>
           <div class="text">
             <strong>Финансовые и ипотечные консультанты</strong><br>
-            Онлайн-поддержка при разделении бюджета и кредитных обязательств
+            Онлайн-поддержка при разделении бюджета <br>и кредитных обязательств
+          </div>
+          <div class="feature-image">
+            <img src="bank.png" alt="Цифровой юрист">
           </div>
         </div>
 
         <div class="feature-block">
-            <div class="number checkmark">
-                <svg class="checkmark-icon" viewBox="0 0 24 24">
-                    <path d="M5 13l4 4L19 7" />
-                </svg>
-            </div>
           <div class="text">
             <strong>Психологи для родителей и детей</strong><br>
-            Онлайн-сессии для взрослых, поддержка детей во время развода
+            Онлайн-сессии для взрослых, поддержка <br>детей во время развода
+          </div>
+          <div class="feature-image">
+            <img src="psyco.png" alt="Цифровой юрист">
           </div>
         </div>
 
         <div class="feature-block">
-            <div class="number checkmark">
-                <svg class="checkmark-icon" viewBox="0 0 24 24">
-                    <path d="M5 13l4 4L19 7" />
-                </svg>
-            </div>
           <div class="text">
             <strong>Программы по реабилитации</strong><br>
-            Эмоциональное и физическое восстановление, новые цели
+            Эмоциональное и физическое <br>восстановление, новые цели
+          </div>
+          <div class="feature-image">
+            <img src="relax.png" alt="Цифровой юрист">
           </div>
         </div>
 
         <div class="feature-block">
-            <div class="number checkmark">
-                <svg class="checkmark-icon" viewBox="0 0 24 24">
-                    <path d="M5 13l4 4L19 7" />
-                </svg>
-            </div>
           <div class="text">
             <strong>Календарь родителя</strong><br>
-            Совместное воспитание, учёт расходов, защищённая переписка
+            Совместное воспитание, учёт расходов, <br>защищённая переписка
+          </div>
+          <div class="feature-image">
+            <img src="calendar.png" alt="Цифровой юрист">
           </div>
         </div>
       </div>
