added required textfields

--- a/alimonyForm.html
+++ b/alimonyForm.html
@@ -452,7 +452,7 @@
                    </span>
                  </legend>
                  <div class="radio-group">
-                   <label><input type="radio" name="kidLivesWithYou" value="yes"> Да</label>
+                   <label><input type="radio" name="kidLivesWithYou" value="yes" required> Да</label>
                    <label><input type="radio" name="kidLivesWithYou" value="no"> Нет</label>
                  </div>
                </fieldset>
@@ -471,7 +471,7 @@
                      </span>
                    </legend>
                  <div class="radio-group">
-                   <label><input type="radio" name="needEstablishedPaternity" value="yes"> Да</label>
+                   <label><input type="radio" name="needEstablishedPaternity" value="yes" required> Да</label>
                    <label><input type="radio" name="needEstablishedPaternity" value="no"> Нет</label>
                  </div>
                </fieldset>
@@ -491,7 +491,7 @@
                    </legend>
 
                  <div class="radio-group">
-                   <label><input type="radio" name="otherKids" value="yes" checked> Да</label>
+                   <label><input type="radio" name="otherKids" value="yes" required> Да</label>
                    <label><input type="radio" name="otherKids" value="no"> Нет</label>
                  </div>
                </fieldset>
@@ -507,7 +507,7 @@
                  <fieldset>
                    <legend>Есть ли судебный акт или нотариальное соглашение об оплате алиментов в пользу иных детей?<span class="required"></span></legend>
                    <div class="radio-group">
-                     <label><input type="radio" name="otherKidsAlimony" value="yes"> Да</label>
+                     <label><input type="radio" name="otherKidsAlimony" value="yes" required> Да</label>
                      <label><input type="radio" name="otherKidsAlimony" value="no"> Нет</label>
                    </div>
                  </fieldset>
@@ -530,7 +530,7 @@
                      </span>
                  </legend>
                  <div class="radio-group">
-                   <label><input type="radio" name="needFixAlimony" value="yes"> Да</label>
+                   <label><input type="radio" name="needFixAlimony" value="yes" required> Да</label>
                    <label><input type="radio" name="needFixAlimony" value="no"> Нет</label>
                  </div>
                </fieldset>
@@ -559,7 +559,7 @@
                      </span>
                    </legend>
                  <div class="radio-group">
-                   <label><input type="radio" name="alimonyPastPeriod" value="yes"> Да</label>
+                   <label><input type="radio" name="alimonyPastPeriod" value="yes" required> Да</label>
                    <label><input type="radio" name="alimonyPastPeriod" value="no"> Нет</label>
                  </div>
                </fieldset>
@@ -582,7 +582,7 @@
                      </span>
                    </legend>
                  <div class="radio-group">
-                   <label><input type="radio" name="courtOrderHasCancelled" value="yes"> Да</label>
+                   <label><input type="radio" name="courtOrderHasCancelled" value="yes" required> Да</label>
                    <label><input type="radio" name="courtOrderHasCancelled" value="no"> Нет</label>
                  </div>
                </fieldset>
@@ -605,7 +605,7 @@
                      </span>
                    </legend>
                  <div class="radio-group">
-                   <label><input type="radio" name="withoutPersonalPresence" value="yes"> Да</label>
+                   <label><input type="radio" name="withoutPersonalPresence" value="yes" required> Да</label>
                    <label><input type="radio" name="withoutPersonalPresence" value="no"> Нет</label>
                  </div>
                </fieldset>
