Deleted required for other kid field

--- a/alimonyForm.html
+++ b/alimonyForm.html
@@ -507,7 +507,7 @@
                  <fieldset>
                    <legend>Есть ли судебный акт или нотариальное соглашение об оплате алиментов в пользу иных детей?<span class="required"></span></legend>
                    <div class="radio-group">
-                     <label><input type="radio" name="otherKidsAlimony" value="yes" required> Да</label>
+                     <label><input type="radio" name="otherKidsAlimony" value="yes"> Да</label>
                      <label><input type="radio" name="otherKidsAlimony" value="no"> Нет</label>
                    </div>
                  </fieldset>
