Deleted some required fields

--- a/alimonyForm.html
+++ b/alimonyForm.html
@@ -498,14 +498,14 @@
                
                <!-- счётчик -->
                <div id="otherKidsWrap" class="count-wrap">
-                 <label class="required" for="otherKidsCount">Укажите количество других детей</label>
+                 <label for="otherKidsCount">Укажите количество других детей</label>
                  <input  type="number" id="otherKidsCount" name="otherKidsCount" value="0" min="0">
                  <small>Укажите других несовершеннолетних детей</small>
                </div>
                
                <div id="otherKidsAlimonyWrap">
                  <fieldset>
-                   <legend>Есть ли судебный акт или нотариальное соглашение об оплате алиментов в пользу иных детей?<span class="required"></span></legend>
+                   <legend>Есть ли судебный акт или нотариальное соглашение об оплате алиментов в пользу иных детей?</legend>
                    <div class="radio-group">
                      <label><input type="radio" name="otherKidsAlimony" value="yes"> Да</label>
                      <label><input type="radio" name="otherKidsAlimony" value="no"> Нет</label>
