--- a/alimonyForm.html
+++ b/alimonyForm.html
@@ -857,6 +857,11 @@
                const removeKidBtn = document.getElementById('removeKidRow');
                const kidsCountInp = document.getElementById('kidsCount');
 
+               // Проверка на мобильное устройство
+               function isMobileDevice() {
+                 return /Mobi|Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
+               }
+
                /* создаём DOM-блок из 5 полей (2 строки) */
                function createKidRow(){
                  const row = document.createElement('div');
@@ -874,9 +879,24 @@
                  /* вторая строка: Дата рождения / Свидетельство */
                  const line2 = document.createElement('div');
                  line2.className = 'grid-2';
+
+                 // Создание input-даты с условной установкой сегодняшней даты
+                 const birthDateInput = document.createElement('input');
+                 birthDateInput.type = 'date';
+                 birthDateInput.name = 'kidBirthDate[]';
+                 birthDateInput.placeholder = 'ДД-ММ-ГГГГ';
+
+                 if (isMobileDevice()) {
+                   const today = new Date();
+                   const yyyy = today.getFullYear();
+                   const mm = String(today.getMonth() + 1).padStart(2, '0');
+                   const dd = String(today.getDate()).padStart(2, '0');
+                   birthDateInput.value = `${yyyy}-${mm}-${dd}`;
+                 }
+
                  line2.append(
-                   Object.assign(document.createElement('input'), {type:'date', name:'kidBirthDate[]', placeholder:'ДД-ММ-ГГГГ'}),
-                   Object.assign(document.createElement('input'), {type:'text', name:'kidCert[]',      placeholder:'Введите номер свидетельства'})
+                   birthDateInput,
+                   Object.assign(document.createElement('input'), {type:'text', name:'kidCert[]', placeholder:'Введите номер свидетельства'})
                  );
 
                  row.append(line1, line2);
@@ -987,8 +1007,9 @@
                      // Укажи только те поля, где это уместно:
                      setToday('alimonyFromDate');
                      setToday('marriageDate');
-                     // setToday('birthDate');       ← осторожно, дата рождения не должна быть сегодняшней!
-                     // setToday('p2BirthDate');
+                     setToday('divorseDate');
+                    setToday('birthDate');
+                    setToday('p2BirthDate');
                    }
                  });
 
