--- a/alimonyForm.html
+++ b/alimonyForm.html
@@ -1069,7 +1069,7 @@
              for (const [key, value] of formData.entries()) {
                if (data[key]) {
                  if (!Array.isArray(data[key])) data[key] = [data[key]];
-                 dчata[key].push(value);
+                 data[key].push(value);
                } else {
                  data[key] = value;
                }
