--- a/alimonyForm.html
+++ b/alimonyForm.html
@@ -707,27 +707,20 @@
 
                /* 2-б. формат телефона  */
 
-               function formatPhone(value) {
-                   const digits = value.replace(/\D/g, '').replace(/^8/, '7').slice(0, 11);
-                   let result = '+7';
-                   if (digits.length > 1) result += '(' + digits.slice(1, 4);
-                   if (digits.length >= 4) result += ') ' + digits.slice(4, 7);
-                   if (digits.length >= 7) result += '-' + digits.slice(7, 9);
-                   if (digits.length >= 9) result += '-' + digits.slice(9, 11);
-                   return result;
-                 }
+               function formatPhoneStrict(value) {
+                 const digits = value.replace(/\D/g, '').replace(/^8/, '7').slice(0, 11);
+                 let result = '';
 
-                 // Заявитель
-                 const phoneInput = document.getElementById('phone');
-                 phoneInput?.addEventListener('input', (e) => {
-                   e.target.value = formatPhone(e.target.value);
-                 });
+                 if (digits.length > 0) result += '+7';
+                 if (digits.length > 1) result += '(' + digits.slice(1, 4);
+                 if (digits.length > 4) result += ') ' + digits.slice(4, 7);
+                 if (digits.length > 7) result += '-' + digits.slice(7, 9);
+                 if (digits.length > 9) result += '-' + digits.slice(9, 11);
 
-                 // Второй родитель
-                 const p2PhoneInput = document.getElementById('p2phone');
-                 p2PhoneInput?.addEventListener('input', (e) => {
-                   e.target.value = formatPhone(e.target.value);
-                 });
+                 return result;
+               }
+               attachFormatter('phone', formatPhoneStrict);
+               attachFormatter('p2phone', formatPhoneStrict);
                
                /* 2-в. формат индекса  */
 
